# RTSPPublish

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/com/ava/rtmppublish/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/com/ava/rtmppublish/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/com/ava/rtmppublish/: ExampleUnitTest.kt
cameraview/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
publish/: build.gradle
publish/src/androidTest/java/cn/com/ava/publish/: EncodeAndMuxTest.java  ExampleInstrumentedTest.kt
publish/src/main/: AndroidManifest.xml
publish/src/main/aidl/cn/com/ava/publish/: IRtspService.aidl
publish/src/main/java/cn/com/ava/publish/: CameraLivingView.kt  IRtspControl.kt  ScreenRecordService.kt
publish/src/main/java/cn/com/ava/publish/audio/: AndroidAudioStreamController.kt  AudioEncoder.kt  AudioRecordProcessor.kt  IAudioEncodeListener.kt  IAudioRecListener.kt  IAudioStreamController.kt
publish/src/test/java/cn/com/ava/publish/: ExampleUnitTest.kt
rtspserver/: CMakeLists.txt  build.gradle
rtspserver/src/androidTest/java/cn/com/ava/rtspserver/: ExampleInstrumentedTest.kt
rtspserver/src/main/: AndroidManifest.xml
rtspserver/src/main/java/cn/com/ava/rtspserver/elgsscreenrecoder/coder/: MediaEncoder.java
rtspserver/src/main/java/cn/com/ava/rtspserver/elgsscreenrecoder/glec/: EGLRender.java  GlUtil.java  STextureRender.java
rtspserver/src/main/java/cn/com/ava/rtspserver/network/: AudioData.java  RTPAudioPacketizer.java  RTPVideoPacketizer.java  ServiceConfig.java  StreamConnection.java  StreamServer.java  TCPAudioPacketizer.java  TCPConnection.java  TCPListener.java  TCPVideoPacketizer.java  UDPAudioPacketizer.java  UDPVideoPacketizer.java  VideoFrame.java
rtspserver/src/main/java/cn/com/ava/rtspserver/network/DDNS/: DDNSClient.java  DNSdynamicClient.java  DuckDNSClient.java  DynuClient.java  FreeDNSDClient.java  NoIpClient.java
rtspserver/src/main/java/cn/com/ava/rtspserver/network/UPnP/: PortMapper.java
rtspserver/src/main/java/cn/com/ava/rtspserver/network/util/: ByteArrayInputBitStream.java  TimeStamp.java  TimeoutCache.java  Utils.java
rtspserver/src/main/java/cn/com/ava/rtspserver/screenrecoder/: ScreenRecorder.java
rtspserver/src/main/jni/: native_lib.cpp
rtspserver/src/main/jni/librtsp/sdp/: sdp-h265.c
rtspserver/src/main/jni/librtsp/server/: rtsp-server.c
rtspserver/src/main/jni/libsdk/include/sys/: spinlock.h
rtspserver/src/test/java/cn/com/ava/rtspserver/: ExampleUnitTest.kt
(+11 files in other folders)
